lib_LTLIBRARIES=libjsonpull.la
libjsonpull_la_SOURCES= \
  datalist.c \
  datalistcell.c \
  jsonlex.c \
  jsonnode.c \
  jsonparser.c \
  jsonprinter.c \
  jsonpull.c \
  printerror.c \
  textdecoder.c \
  textencoder.c \
  textencoder_appendf.c \
  textencoding.c
pkginclude_HEADERS = \
  datalist.h \
  datalistcell.h \
  jsonlex.h \
  jsonnode.h \
  jsonparser.h \
  jsonprinter.h \
  jsonpull.h \
  jsonpull_tkn.h \
  jsontype.h \
  printerror.h \
  textdecoder.h \
  textencoder.h \
  textencoder_appendf.h \
  textencoding.h \
  datalist.c \
  datalistcell.c \
  jsonlex.c \
  jsonnode.c \
  jsonparser.c \
  jsonprinter.c \
  jsonpull.c \
  printerror.c \
  textdecoder.c \
  textencoder.c \
  textencoder_appendf.c \
  textencoding.c
libjsonpull_la_LDFLAGS = -version-info 0:9:0

